[gd_scene load_steps=4 format=3 uid="uid://dm8eiiho4h0gd"]

[ext_resource type="Script" uid="uid://b0v3tbwkw2asb" path="res://ui/hud/component_display.gd" id="1_lyrs5"]
[ext_resource type="Theme" uid="uid://ctglmnnwqwbq4" path="res://assets/theme/hud.tres" id="1_md1nr"]
[ext_resource type="Script" uid="uid://xvw5unpybtr6" path="res://ui/hud/components/notification/notification_area.gd" id="2_md1nr"]

[node name="Components" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_md1nr")
script = ExtResource("1_lyrs5")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="LocationLabel" type="Label" parent="PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "NO_LOCATION"

[node name="FPSLabel" type="Label" parent="PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "00 FPS"

[node name="ZoomLabel" type="Label" parent="PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Zoom: 0.0x"

[node name="NotificationArea" type="ScrollContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(416, 192)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 2
script = ExtResource("2_md1nr")
metadata/_custom_type_script = "uid://xvw5unpybtr6"

[node name="MarginInner" type="MarginContainer" parent="NotificationArea"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="AlertStack" type="VBoxContainer" parent="NotificationArea/MarginInner"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
